--- a/TC_AZURE_DEVOPS/.settings/org.talend.repository.prefs
+++ b/TC_AZURE_DEVOPS/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:gtaQC1vp99aCsqmMPZwwmio9c1+K7FRxEV6MxRCBX7U/LQIEG1+8aVU\=
